src/main/metadata-au/objects/City__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Map the area and zip code for cities.</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>City</label>
</CustomObject>